--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,11 @@
           <scope>provided</scope>
       </dependency>
 
+      <dependency>
+          <groupId>org.apache.curator</groupId>
+          <artifactId>curator-recipes</artifactId>
+          <version>2.7.0</version>
+      </dependency>
+
   </dependencies>
 </project>
