--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,15 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <!--<curator.version>2.9.0</curator.version>-->
+      <curator.version>4.0.0</curator.version>
   </properties>
 
   <dependencies>
         <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
-          <version>3.8.1</version>
+          <version>4.12</version>
           <scope>test</scope>
         </dependency>
 
@@ -55,8 +57,24 @@
 
       <dependency>
           <groupId>org.apache.curator</groupId>
+          <artifactId>curator-framework</artifactId>
+          <version>${curator.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.curator</groupId>
           <artifactId>curator-recipes</artifactId>
-          <version>2.7.0</version>
+          <version>${curator.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.curator</groupId>
+          <artifactId>curator-x-discovery</artifactId>
+          <version>${curator.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.curator</groupId>
+          <artifactId>curator-test</artifactId>
+          <version>${curator.version}</version>
+          <scope>test</scope>
       </dependency>
 
   </dependencies>
