--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,18 @@
           <version>${curator.version}</version>
           <scope>test</scope>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+      <dependency>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+          <version>1.15</version>
+      </dependency>
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.8.6</version>
+      </dependency>
+
 
   </dependencies>
 </project>
